api get quitPlan custom
